// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScrollableContainer /> by default matches with snapshot 1`] = `
<div
  className="styled__StyledContainer-d41exg-0 lmcHcx styled__StyledContainer-z412rl-0 fQDfYC"
>
  <div
    className="styled__StyledScrollableContainer-d41exg-1 cygHPO"
  />
  <div
    className="styled__StyledLeftGradient-d41exg-2 euYxbE"
  />
  <div
    className="styled__StyledRightGradient-d41exg-3 eFLWvJ"
  />
</div>
`;

exports[`<ScrollableContainer /> with children matches with snapshot 1`] = `
<div
  className="styled__StyledContainer-d41exg-0 lmcHcx styled__StyledContainer-z412rl-0 fQDfYC"
>
  <div
    className="styled__StyledScrollableContainer-d41exg-1 cygHPO"
  >
    <nav>
      <ul>
        <li>
          Item 1
        </li>
        <li>
          Item 2
        </li>
        <li>
          Item 3
        </li>
      </ul>
    </nav>
  </div>
  <div
    className="styled__StyledLeftGradient-d41exg-2 euYxbE"
  />
  <div
    className="styled__StyledRightGradient-d41exg-3 eFLWvJ"
  />
</div>
`;

exports[`<ScrollableContainer /> with some props matches with snapshot 1`] = `
<div
  aria-hidden={true}
  className="custom__class styled__StyledContainer-d41exg-0 lmcHcx styled__StyledContainer-z412rl-0 fQDfYC"
  style={
    Object {
      "color": "red",
    }
  }
>
  <div
    className="styled__StyledScrollableContainer-d41exg-1 cygHPO"
  />
  <div
    className="styled__StyledLeftGradient-d41exg-2 euYxbE"
  />
  <div
    className="styled__StyledRightGradient-d41exg-3 eFLWvJ"
  />
</div>
`;
